@@ -12,7 +12,7 @@ o [rainbru] Fixing some OgreGui related graphical bugs
 o [rainbru] i18n (source are taken alphabetically)
    Please use GTS_* macros from rainbrudef.h for all translated
    strings using sprintf and parameters
-- common/timer.cpp was the last translated source
+- common/tinyxmlerror.cpp.cpp was the last translated source
 
 * OgreGui : GUI over Ogre3D based on QuadRenderer
 - gsServerList uses OgreGUI (with MulticolumnList)
@@ -125,10 +125,13 @@ A system that serialize widgets position and configuration
    Please update config/languages.xml if changes in i18n
    Libraries versionning in doc/libVersionning.html and configure.in
 
-* v 0.0.5-192 (28 mar 2009 - ???)
-- (17) common/serverlistitem.cpp now uses gettext compliant string
+* v 0.0.5-193 (24 apr 2009 - ???)
+
+* v 0.0.5-192 (28 mar 2009 - 24 apr 2009)
+-  common/tinyxmlerror.cpp now uses gettext compliant string
+-  common/serverlistitem.cpp now uses gettext compliant string
    Also sha1.cpp, stringconv.cpp, timer.cpp
-- (16) common/objectmesh.cpp uses some GTS_* macros
+-  common/objectmesh.cpp uses some GTS_* macros
    Also optionfloatrangeattribute.cpp, optionintrangeattribute.cpp,
    optionlistattribute.cpp, optionmanager.cpp
 - common/curlaccountconfirmail.cpp uses some GTS_* macros
