@@ -33,20 +33,20 @@ distribution.
 
 const char* TiXmlBase::errorString[ TIXML_ERROR_STRING_COUNT ] =
 {
-	"No error",
-	"Error",
-	"Failed to open file",
-	"Memory allocation failed.",
-	"Error parsing Element.",
-	"Failed to read Element name",
-	"Error reading Element value.",
-	"Error reading Attributes.",
-	"Error: empty tag.",
-	"Error reading end tag.",
-	"Error parsing Unknown.",
-	"Error parsing Comment.",
-	"Error parsing Declaration.",
-	"Error document empty.",
-	"Error null (0) or unexpected EOF found in input stream.",
-	"Error parsing CDATA.",
+  _("No error"),
+  _("Error"),
+  _("Failed to open file"),
+  _("Memory allocation failed."),
+  _("Error parsing Element."),
+  _("Failed to read Element name"),
+  _("Error reading Element value."),
+  _("Error reading Attributes."),
+  _("Error: empty tag."),
+  _("Error reading end tag."),
+  _("Error parsing Unknown."),
+  _("Error parsing Comment."),
+  _("Error parsing Declaration."),
+  _("Error document empty."),
+  _("Error null (0) or unexpected EOF found in input stream."),
+  _("Error parsing CDATA."),
 };
