@@ -7,7 +7,7 @@ dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
 AM_CONFIG_HEADER(config.h)
 AC_SUBST(VERSION)
 
-AC_DEFINE([BUILD_RELEASE], ["192"], [The build release number])
+AC_DEFINE([BUILD_RELEASE], ["193"], [The build release number])
 
 dnl -----------------------------------------------
 dnl Package name and version number (user defined)
