@@ -30,20 +30,35 @@
      </tr>
      
 <!-- Add here a version when it is finished (when switching to Ver++) -->
-     <tr class="regTest1">
-       <td>v 0.0.5-191</td>                       <!-- Version -->
-       <td>28 mar 2008</td>                       <!-- Date -->
-       <td align="right">66&nbsp;635</td>         <!-- SLOC -->
+     <tr class="regTest2">
+       <td>v 0.0.5-192</td>                       <!-- Version -->
+       <td>24 apr 2008</td>                       <!-- Date -->
+       <td align="right">66&nbsp;546</td>         <!-- SLOC -->
        <td align="right">13</td>                  <!-- Console count -->
        <td>220</td>                               <!-- Unit tests -->
        <td>OK</td>                                <!-- Linux -->
        <td><font color="red">No</font></td>       <!-- Win32 -->
        <td>-</td>                                 <!-- Mem on win32 -->
-       <td>2359</td>                              <!-- Doc pages -->
-       <td>166</td>                               <!-- ChangeLog lines -->
-       <td>97</td>                                <!-- Number of PO msg -->
-       <td>Starting using gettext.</td>           <!-- Comment -->
+       <td>2377</td>                              <!-- Doc pages -->
+       <td>237</td>                               <!-- ChangeLog lines -->
+       <td>266</td>                               <!-- Number of PO msg -->
+       <td>More files uses gettext.</td>          <!-- Comment -->
        <td>NC</td>                                <!-- Unit tests result -->
+     </tr>
+     <tr class="regTest1">
+       <td>v 0.0.5-191</td>
+       <td>28 mar 2008</td>
+       <td align="right">66&nbsp;635</td>
+       <td align="right">13</td>
+       <td>220</td>
+       <td>OK</td>
+       <td><font color="red">No</font></td>
+       <td>-</td>
+       <td>2359</td>
+       <td>166</td>
+       <td>97</td>
+       <td>Starting using gettext.</td>
+       <td>NC</td>
      </tr>
      <tr class="regTest1">
        <td>v 0.0.5-190</td>
@@ -683,5 +698,5 @@
    <hr>
 
      
-<!-- hhmts start -->Last modified: Sun Mar 29 13:32:31 CEST 2009 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Fri Apr 24 16:47:25 CEST 2009 <!-- hhmts end -->
 </body> </html>
