@@ -55,3 +55,4 @@ common/serverlistitem.cpp
 common/sha1.cpp
 common/stringconv.cpp
 common/timer.cpp
+common/tinyxmlerror.cpp
